* Fixed the icons in the bottom footer bar (larger and dont overlap)

--- a/ui/_css/general/general.less
+++ b/ui/_css/general/general.less
@@ -627,6 +627,30 @@ form #form-bottom {
 	}
 
 }
+#notifications-area-right-bottom {
+	float: right; 
+	position: absolute; 
+	right: 0;
+	i.icon-grey {
+		font-size: 14px;
+		color: #999!important;
+		
+	}
+	a:hover {
+		
+		
+		i.icon-grey {
+			color: #ccc!important;
+
+		}
+	}
+
+	.help_link {
+		margin-left:5px;
+	}
+
+}
+
 
 .messages_link {
 	position: relative;
@@ -649,8 +673,9 @@ form #form-bottom {
 	right:0;
 	a {
 		white-space:nowrap;
-		
-		i {
+
+		i.icon-grey {
+			font-size: 30px;
 			text-shadow: 0px 0px 1px #fff;
 			
 		}
@@ -677,10 +702,10 @@ form #form-bottom {
 		border-bottom: 3px solid #005580;
 		
 			i.icon-grey {
-				color: #999!important;
+				color: #afafaf !important;
 			}
 		.count {
-			text-shadow: 0px 0px 6px #000;
+			
 			
 		}
 		
@@ -688,12 +713,24 @@ form #form-bottom {
 }
 
 #user-loggedin-list-trigger {
-	position: absolute; left:0; top:0;
+	position: absolute; left:0; top:0; right:0;
+	z-index : 1;
 	
 	.dropdown-toggle {
 		cursor : pointer;
 		padding-right: 30px;
 		color: #999;
+
+		display:inline-block;
+		width: 80px;
+		white-space: nowrap;
+		overflow: hidden;
+		text-overflow: ellipsis;
+		
+		
+		&:hover {
+			color: #ccc;	
+		}
 	}
 	.dropdown-menu {
 		-webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
@@ -708,9 +745,3 @@ form #form-bottom {
 	margin-left:-130px;
 }
 
-#notifications-area-right-bottom {
-	float: right; position: absolute; right: 0;
-	
-	
-
-}
